actualiza configuracion, gestionProyecto y tareas

--- a/src/main/resources/templates/configuracion.html
+++ b/src/main/resources/templates/configuracion.html
@@ -18,7 +18,7 @@
 </head>
 
 <body class="bodyIndex">
-
+  <nav th:replace="template.html :: nav"></nav>
   <div class="borderedit container col-9 px-8 py-5 my-4 ">
     <div class="col-10 container mb-4">
       <h1 class="marca">Configuración</h1>
