--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -181,7 +181,7 @@
                                                                         aria-label="Close"></button>
                                                                 </div>
                                                                 <div class="modal-body my-3">
-                                                                    <form th:action="@{.....}" method="post">
+                                                                    <form th:action="@{/tarea/editar}" method="post">
                                                                         <div>
                                                                             <p th:if="${error!=null}"
                                                                                 th:text="${error}">
@@ -302,7 +302,7 @@
                                                                         aria-label="Close"></button>
                                                                 </div>
                                                                 <div class="modal-body my-3">
-                                                                    <form th:action="@{....}" method="post">
+                                                                    <form th:action="@{/tarea/eliminar}" method="post">
                                                                         <div class="col-12 text-start">
                                                                             <p class="text-secondary fs-4"> ¿Estas seguro que
                                                                                 quieres eliminar la tarea?
