--- a/src/main/resources/templates/reloj.html
+++ b/src/main/resources/templates/reloj.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
     <!-- Personalized CSS -->
@@ -57,9 +58,36 @@
             <button id="btn-start" class="timer_btn timer_btn-start">
                 <span class="material-icons">play_arrow</span>
             </button>
-            <button id="btn-reset" class="timer_btn timer_btn-reset">
+            <button id="btn-reset" class="timer_btn timer_btn-reset" data-bs-toggle="modal" data-bs-target="#resettime">
                 <span class="material-icons">timer</span>
             </button>
+            <div class="modal fade" id="resettime" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content borderedit">
+                        <div class="modal-header">
+                            <h5 class="modal-title fs-2 text marca text-decoration-underline text-white" id="exampleModalLabel">
+                                Terminar Pomodoro</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body my-3">
+                            <form th:action="@{}" method="post">
+                                <div class="col-12 text-start">
+                                    <p class="text-secondary fs-4"> ¿Estas
+                                        seguro que
+                                        quieres terminar el pomodoro?
+                                    </p>
+                                </div>
+                                <div class="col mt-4 modal-footer">
+                                    <button type="submit" class="btn but btn-success me-3">Terminar</button>
+                                    <button type="button" class="btn but btn-success"
+                                        data-bs-dismiss="modal">Cancelar</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
