--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -198,7 +198,7 @@
                                                                             <div class="col-sm-12 borderbox">
                                                                                 <input type="text" class="form-control"
                                                                                     id="Nombre" name="nombre"
-                                                                                    th:text="${tarea.nombre}">
+                                                                                    th:value="${tarea.nombre}">
                                                                             </div>
                                                                         </div>
                                                                         <div class="col mb-1">
@@ -207,7 +207,7 @@
                                                                             <div class="col-sm-12 borderbox">
                                                                                 <input type="date" class="form-control"
                                                                                     id="fecha" name="fecha"
-                                                                                    th:text="${tarea.fecha}">
+                                                                                    th:value="${tarea.fecha}">
                                                                             </div>
                                                                         </div>
                                                                         <div class="col mb-1">
@@ -219,7 +219,7 @@
                                                                                 <input type="number"
                                                                                     class="form-control"
                                                                                     id="cantidadPom" name="cantidadPom"
-                                                                                    th:text="{tarea.cantidadPom}">
+                                                                                    th:value="${tarea.cantidadPom}">
                                                                             </div>
                                                                         </div>
                                                                         <div class="col mb-1">
@@ -228,17 +228,20 @@
                                                                             </label>
                                                                             <div class="input-group mb-3">
                                                                                 <select class="form-select"
-                                                                                    th:each="proyectos : ${listaProyectos}"
                                                                                     id="inputGroupSelect01">
-                                                                                    <option selected
-                                                                                        th:if="${tarea.proyecto = proyectos.nombre}"
-                                                                                        th:text="${tarea.proyecto}">
-                                                                                        Elije un proyecto
-                                                                                    </option>
-                                                                                    <option
-                                                                                        th:text="${proyectos.nombre}">
-                                                                                        One
-                                                                                    </option>
+                                                                                    <div
+                                                                                        th:each="proyectos : ${listaProyectos}">
+                                                                                        <option selected
+                                                                                            th:if="${tarea.proyecto = proyectos.nombre}"
+                                                                                            th:text="${tarea.proyecto}">
+                                                                                            Elije un proyecto
+                                                                                        </option>
+                                                                                        <option
+                                                                                            th:text="${proyectos.nombre}">
+                                                                                            One
+                                                                                        </option>
+                                                                                    </div>
+
                                                                                 </select>
                                                                             </div>
                                                                         </div>
@@ -253,7 +256,7 @@
                                                                                         <input class="form-check-input"
                                                                                             type="radio"
                                                                                             name="prioridad" id="alta"
-                                                                                            value="option1">
+                                                                                            value="ALTA">
                                                                                         <label
                                                                                             class="form-check-label obs text-secondary"
                                                                                             for="inlineRadio1">Alta</label>
@@ -263,7 +266,7 @@
                                                                                         <input class="form-check-input"
                                                                                             type="radio"
                                                                                             name="prioridad" id="media"
-                                                                                            value="option2">
+                                                                                            value="MEDIA">
                                                                                         <label
                                                                                             class="form-check-label obs text-secondary"
                                                                                             for="inlineRadio2">Media</label>
@@ -273,7 +276,7 @@
                                                                                         <input class="form-check-input"
                                                                                             type="radio"
                                                                                             name="prioridad" id="baja"
-                                                                                            value="option3">
+                                                                                            value="BAJA">
                                                                                         <label
                                                                                             class="form-check-label obs text-secondary"
                                                                                             for="inlineRadio3">Baja</label>
@@ -313,7 +316,7 @@
                                                                         aria-label="Close"></button>
                                                                 </div>
                                                                 <div class="modal-body my-3">
-                                                                    <form th:action="@{/tarea/eliminar}" method="post">
+                                                                    <form th:action="@{/tarea/eliminar(tarea_id=__${tarea.id}__, vista=__${vista}__, usuario_id=__${session.usuarioSession.id}__)}" method="post">
                                                                         <div class="col-12 text-start">
                                                                             <p class="text-secondary fs-4"> ¿Estas
                                                                                 seguro que
