--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -89,7 +89,7 @@
                                                                 class="col-sm-2 col-form-label pre-control">Email</label>
                                                             <div class="col-sm-12 borderbox">
                                                                 <input type="email" class="form-control" id="email"
-                                                                    th:value="${session.usuarioSession. mail}" disabled>
+                                                                    th:value="${session.usuarioSession.mail}" disabled>
                                                             </div>
                                                         </div>
                                                         <div class="col mb-1">
@@ -114,7 +114,7 @@
                                                             class="form-check form-switch my-4 ms-4 d-flex align-items-center">
                                                             <input class="form-check-input switch_control my-3"
                                                                 type="checkbox" role="switch"
-                                                                id="flexSwitchCheckChecked" checked>
+                                                                id="flexSwitchCheckChecked" name="habilitado" checked>
                                                             <label class="form-check-label fs-5 mx-2 text-secondary"
                                                                 for="flexSwitchCheckChecked">Aqui puede
                                                                 activar o desactivar su usuario</label>
