--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active link-secondary fs-4" aria-current="page" th:href="@{/principal}">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link-secondary fs-4" th:href="@{/reloj}" >Reloj</a>
+                        <a class="nav-link link-secondary fs-4" th:href="@{/prueba}" >Reloj</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link link-secondary fs-4" th:href="@{/configuracion/(usuario_id=__${session.usuarioSession.id}__)}">Configuracion</a>
