Correccion crearTarea desde vista Mañana y mostrar correctamente el nombre de la vista.

--- a/src/main/resources/templates/vistaPrincipal.html
+++ b/src/main/resources/templates/vistaPrincipal.html
@@ -36,7 +36,7 @@
     <br>
 
     <div class="col-9 container">
-      <a class="fs-2 btn butG btn-success" th:href="@{/tarea/mañana(usuario_id=__${session.usuarioSession.id}__)}" method="get">
+      <a class="fs-2 btn butG btn-success" th:href="@{/tarea/manana(usuario_id=__${session.usuarioSession.id}__)}" method="get">
         <div class="row">
           <div class="col-1">
             <img src="../static/img/flecha.png" th:src="@{/img/flecha.png}" alt="flecha" class="imagen-box">
