--- a/src/main/resources/templates/tareas.html
+++ b/src/main/resources/templates/tareas.html
@@ -152,11 +152,11 @@
                                     <div class="row">
                                         <div class="col-2 my-auto">
                                             <div class="row ms-auto">
-                                                <abbr title="Tarea Terminada"><button type="button"
-                                                        class="btn but_tarea btn-success rounded-pill btn-lg"
-                                                        id="tarea_chk"><span class="material-icons">
-                                                            radio_button_unchecked
-                                                        </span></button></abbr>
+                                                <abbr title="Tarea Terminada">
+                                                    <button type="button"
+                                                            class="tarea-chk btn but_tarea btn-success rounded-pill btn-lg"
+                                                            th:id="${tarea.id}"><span class="material-icons">radio_button_unchecked</span></button>
+                                                </abbr>
                                             </div>
                                         </div>
                                         <div class="col-8 my-1">
@@ -387,6 +387,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <!-- jQuery -->
+    <script src="../static/js/jquery-3.6.0.js" th:src="@{/js/jquery-3.6.0.js}"></script>
+    <!-- Personalized JS -->
+    <script src="../static/js/main.js" th:src="@{/js/main.js}"></script>
 </body>
 
 </html>
